# mutants2

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml  weekly_maintenance.yml
docs/: CODEX_GUIDE.md  agents.md
mutants2/: __main__.py  main.py  render.py  testing_api.py  types.py
mutants2/cli/: input.py  keynames.py  repl.py  shell.py
mutants2/data/: __init__.py  class_tables.py  config.py  room_headers.py
mutants2/engine/: ai.py  classes.py  combat.py  gen.py  items.py  items_resolver.py  items_util.py  leveling.py  loop.py  loot_flow.py  macros.py  monsters.py  persistence.py  player.py  render.py  rng.py  senses.py  state.py  types.py  world.py
mutants2/ui/: articles.py  help.py  items_render.py  render.py  strings.py  theme.py  wrap.py
scripts/: fast_check.sh  scan_cleanup.py
tests/: conftest.py  test_aggro_on_entry.py  test_audio_movement_only.py  test_classes.py  test_cli.py  test_combat_minimal.py  test_commands_abbrev.py  test_convert_command.py  test_debug_reset_wipe.py  test_debug_riblets.py  test_entry_yells_before_arrivals.py  test_exit_priority.py  test_generator.py  test_get_drop_prompts.py  test_gibberish_turns.py  test_help_alias.py  test_inventory_render_only.py  test_item_limits.py  test_item_schema.py  test_items_basic.py  test_items_prefix_and_abbrev.py  test_items_topup_daily.py  test_keymap.py  test_look_and_cues.py  test_look_dir_prefix.py  test_look_lovely_ground_item.py  test_macros.py  test_macros_help.py  test_macros_keypad.py  test_macros_keys.py  test_macros_keys_fallback.py  test_monster_loot.py  test_monsters_basic.py  test_move_only_when_aggro.py  test_movement.py  test_natural_dex_ac.py  test_no_preaggro_after_travel.py  test_open30_topology.py  test_passive_vs_aggro_movement.py  test_peek_echo_multi_spawn.py  (+16 more)
tests/commands/: test_debug.py  test_throw.py
tests/services/: test_item_transfer.py
tests/slow/: conftest.py  test_combat_minimal.py  test_commands_abbrev.py  test_convert_command.py  (+19 more)
(+59 files in other folders)
