[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutants2"
version = "0.1.0"
description = "Simple mutants2 game"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
  "black",
  "ruff",
  "mypy",
  "pyright",
  "pytest-cov",
  "vulture",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pyright]
include = ["mutants2"]
exclude = ["tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.coverage.run]
branch = true
source = ["mutants2"]

[tool.coverage.report]
fail_under = 85
show_missing = true

