[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutants2"
version = "0.1.0"
description = "Simple mutants2 game"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
  "black",
  "ruff",
  "mypy",
  "vulture",
  "pyright",
]

[tool.black]
line-length = 88
target-version = ["py311", "py310", "py39"]
include = "\\.pyi?$"
extend-exclude = '''
(?x)(
  ^\.venv/|
  ^build/|
  ^dist/
)
'''

[tool.ruff]
line-length = 88
target-version = "py311"

